--- a/basic.css
+++ b/basic.css
@@ -2,7 +2,7 @@
    General Page Styling
 ========================= */
 body {
-    background-color: #f2f2f2;        /* soft gray background */
+    background-color: #add8e6;
     font-family: Arial, Helvetica, sans-serif;
     color: #222;
     margin: 0;
