--- a/basic.css
+++ b/basic.css
@@ -102,7 +102,7 @@ th, td {
 
 /* Table header styling */
 th {
-    background-color: #444;
+    background-color: #add8e6;
     color: #ffffff;
 }
 
