--- a/basic.css
+++ b/basic.css
@@ -38,7 +38,7 @@ p:nth-of-type(2) {
     padding: 20px;
     border: 2px solid #008000;
     line-height: 1.8;
-    background-color: #ffffff;
+    background-color: #000080;
 }
 
 
@@ -53,7 +53,7 @@ p:nth-of-type(2) {
     padding: 20px;
     border: 2px solid #008000;
     line-height: 1.8;
-    background-color: #ffffff;
+    background-color: #000080;
 }
 
 
