--- a/basic.css
+++ b/basic.css
@@ -61,7 +61,7 @@ p:nth-of-type(2) {
    Links
 ========================= */
 a {
-    color: #0066cc;
+    color: #000080;
     text-decoration: none;
 }
 
