--- a/basic.css
+++ b/basic.css
@@ -39,6 +39,7 @@ p:nth-of-type(2) {
     border: 5px solid #008000;
     line-height: 1.8;
     background-color: #000080;
+    color: #ffffff;
 }
 
 
@@ -54,6 +55,7 @@ p:nth-of-type(2) {
     border: 5px solid #008000;
     line-height: 1.8;
     background-color: #000080;
+    color: #ffffff;
 }
 
 
