--- a/basic.css
+++ b/basic.css
@@ -91,7 +91,7 @@ li {
 
 /* List item links (different from w3schools link) */
 li a {
-    color: #ffffff;
+    color: #000080;
 }
 
 /* =========================
