--- a/basic.css
+++ b/basic.css
@@ -1,6 +1,4 @@
-/* =========================
-   General Page Styling
-========================= */
+/* General Page Styling */
 body {
     background-color: #add8e6;
     font-family: Arial, Helvetica, sans-serif;
@@ -9,9 +7,7 @@ body {
     padding: 0;
 }
 
-/* =========================
-   Headers
-========================= */
+/*  Headers */
 h1 {
     text-align: center;               /* top header aligned correctly */
     font-size: 3rem;                  /* larger main header */
@@ -23,15 +19,14 @@ h2 {
     margin: 30px 0 15px 40px;
 }
 
-/* =========================
-   Paragraphs
-========================= */
+/* Paragraphs */
 p {
     margin: 15px 40px;
     line-height: 1.6;
 }
 
 /* 2nd paragraph special formatting */
+
 p:nth-of-type(2) {
     width: 60%;
     margin: 30px auto;
@@ -41,13 +36,9 @@ p:nth-of-type(2) {
     background-color: #000080;
     color: #ffffff;
 }
-
-
-
-
-
 
 /* 4th paragraph special formatting */
+
 p:nth-of-type(2) {
     width: 60%;
     margin: 30px auto;
@@ -59,9 +50,8 @@ p:nth-of-type(2) {
 }
 
 
-/* =========================
-   Links
-========================= */
+/* Links  */
+
 a {
     color: #000080;
     text-decoration: none;
